public class Game {

    public static void main(String[] args) {
        Tetris game = new Tetris(10, 20);
        game.gameLoop();
    }
}
