@startuml

skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor<<Model>> LightBlue
    BackgroundColor<<View>> LightGreen
    BackgroundColor<<Controller>> LightCoral
    BackgroundColor<<Utility>> LightGray
}

class Game <<Controller>> {
    Punto de entrada
}

class Tetris <<Controller>> {
    Controlador principal
}

class Board <<Model>> {
    Tablero del juego
}

class Piece <<Model>> {
    Pieza de Tetris
}

class Position <<Model>> {
    Coordenadas
}

class BoardView <<View>> {
    Visualiza el tablero
}

class PieceView <<View>> {
    Visualiza las piezas
}

class PieceFactory <<Utility>> {
    Crea piezas
}

class Console <<Utility>> {
    Entrada/Salida
}

Game --> Tetris : inicia

Tetris --> Board : controla
Tetris --> BoardView : actualiza
Tetris --> PieceFactory : solicita piezas
Tetris --> Console : lee comandos

Board --> Piece : gestiona

Piece --> Position : tiene

BoardView --> Board : lee estado
BoardView --> PieceView : usa
BoardView --> Console : escribe

PieceFactory --> Piece : crea
PieceFactory --> PieceView : crea

note right of Game
<b>Vista simplificada del diseño</b>
    
Este diagrama muestra solo las
relaciones principales entre clases.
   
Los colores indican la capa MVC:

🔴    Controlador
🔵    Modelo  
🟢    Vista
⚪    Utilidades
end note

@enduml